--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </li>
           
           <li class="nav-item">
-            <a class="nav-link" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgithub.com%2FRastifer%2Ffluffy-barnacle-echo-jrast" target="_blank">Check out the validation for this site</a>
+            <a class="nav-link" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Frastifer.github.io%2Ffluffy-barnacle-echo-jrast%2F" target="_blank">Check out the validation for this site</a>
           </li>
         </ul>
        </nav>
